GitBook: No commit message